# YuCPU

./: .gitignore  .pre-commit-config.yaml  404.html  Assembly.html  CHANGELOG.md  Cargo.toml  Instructions.html  LICENSE  README.md  The_CPU.html  YuCPU.html  all_chars.yuasm  book.toml  compile_all.py  cpu_dump.txt  index.html  language-configuration.json  opcodes.md  package.json  print.html  searchindex.js  searchindex.json  test.txt  test.yuasm  vsc-extension-quickstart.md  yucpu-0.0.1.vsix
.github/workflows/: build-project.yml  pub-docs.yml  rust-clippy.yml
Assembly/: functions.html  home.html
Instructions/: ADD.html  Bxx.html  CALL.html  CMP.html  HLT.html  LD.html  LDS.html  MOV.html  NOP.html  POP.html  PSH.html  RET.html  STx.html  SUB.html
The_CPU/: bytecode.html  flags.html  home.html  memory.html  opcodes.html  registers.html
docs/: docs.md  index.md
examples/: all_chars.yuasm  box.yuasm  interrupt_code.yuasm  keyboard.yuasm  strings.yuasm
src/: Assembly.md  Instructions.md  SUMMARY.md  YuCPU.md  assembler.rs  common.rs  deassembler.rs  disassembler.rs  main.rs  vcpu.rs
src/Assembly/: functions.md
src/Instructions/: ADD.md  Bxx.md  CALL.md  CMP.md  HLT.md  LD.md  LDS.md  MOV.md  NOP.md  POP.md  PSH.md  RET.md  STx.md  SUB.md
src/The_CPU/: bytecode.md  flags.md  home.md  memory.md  opcodes.md  registers.md
src/assembler/: label.rs  mod.rs  parser.rs  tests.rs  token.rs  tokenizer.rs
src/common/: hex.rs  instruction.rs
src/vcpu/: bus.rs  cpu.rs  cpu_dump.rs  device.rs  mod.rs  registers.rs  tests.rs
syntaxes/: yucpu.tmLanguage.json
(+12 files in other folders)
