[package]
name = "yucpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0.1"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
itertools = "0.10.5"
logos = "0.12.1"
regex = "1.7.1"
strum = "0.24.1"
strum_macros = "0.24.3"
